--- a/A1/style.css
+++ b/A1/style.css
@@ -25,6 +25,7 @@ h1 {
   margin-bottom: 30px;
   background: url('images/headbg.png') top left repeat;
   padding: 10px 0;
+  color: red;
 }
 #references cite {
   margin: 1em 0 0 3em;
