--- a/A1/style.css
+++ b/A1/style.css
@@ -36,15 +36,20 @@ h1 {
 }
 .website {
   border-right: 5px solid blue;
+  background: url('images/web.png') top right no-repeat;
+  
 }
 .book {
   border-right: 5px solid red;
+  background: url('images/llibres.png') top right no-repeat;
+  color: red;
 }
 .article {
   border-right: 5px solid green;
+  background: url('images/articles.png') top right no-repeat;
 }
 #footer {
-  font-size: 0.5em;
+  font-size: 0em;
   border-top: 1px solid #000;
   margin-top: 20px;
 }
